Adding null check on repositories